# Glitchframe

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  _diskpart_compact_docker.txt  ai-context.md  app.py  config.py  current-handover-prompt.md  install.js  orchestrator.py  pinokio.js  pinokio_meta.json  pyproject.toml  requirements.txt  reset.js  start.js  suno-prompt-skill.md  suno-songs-v6.md  torch.js  update-handover-prompt.md  update.js
.taskmaster/: state.json
.taskmaster/docs/: prd-effects-timeline.txt  prd-logo-rim-lights.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
assets/shaders/: geometry_pulse.frag  liquid_chrome.frag  nebula_drift.frag  nebula_flow.frag  paper_grain.frag  particles.frag  passthrough.vert  spectral_milkdrop.frag  spectrum_bars.frag  synth_grid.frag  tunnel_flight.frag  vhs_tracking.frag  void_ascii_bg.frag  voidcat_laser.frag
docs/: handover-transcription-quality.md  index.md
docs/guides/: getting-started-windows.md
docs/technical/: audio-analyzer.md  audio-ingest-and-cache.md  audio-vignette.md  background-keyframes-editor.md  background-modes.md  background-stills-hidream.md  background-stills.md  block-glitch-renderer.md  chromatic-aberration-renderer.md  color-invert-renderer.md  effects-editor-backend.md  effects-timeline-compositor.md  effects-timeline-editor.md  effects-timeline-gradio-tab.md  effects-timeline-renderers.md  effects-timeline-test-suite.md  effects-timeline.md  fade-renderer.md  frame-compositor.md  gpu-memory.md  gradio-ui.md  kinetic-typography.md  logo-composite.md  logo-rim-audio-modulation.md  logo-rim-beams.md  logo-rim-branding-ui.md  logo-rim-compositing.md  logo-rim-lights-color.md  logo-rim-lights-prep.md  logo-rim-lights.md  lyrics-aligner.md  lyrics-timeline-editor.md  metadata-generator.md  musical-events.md  orchestrator-effects-timeline-wiring.md  pinokio-lyrics-align-windows-handover.md  pinokio-package.md  pipeline-orchestrator.md  pixel-smear-renderer.md  preview-and-render.md  (+14 more)
pipeline/: __init__.py  _huggingface_symlink_compat.py  _speechbrain_compat.py  _torch_xpu_compat.py  _waveform_peaks.py  audio_analyzer.py  audio_ingest.py  audio_vignette.py  av_sync.py  background.py  background_animatediff.py  background_kenburns.py  background_stills.py  background_stills_hidream.py  background_stills_hidream_worker.py  beat_pulse.py  block_glitch.py  builtin_shaders.py  chromatic_aberration.py  color_invert.py  compositor.py  effects_editor.py  effects_timeline.py  fade.py  ffmpeg_tools.py  gpu_memory.py  keyframes_editor.py  keyframes_timeline.py  kinetic_typography.py  logo_composite.py  logo_rim_beams.py  logo_rim_lights.py  lyrics_aligner.py  lyrics_editor.py  metadata.py  musical_events.py  pixel_smear.py  preset_colors.py  preview.py  reactive_shader.py  (+14 more)
pipeline/rife_vendor/: __init__.py  ifnet_hdv3.py  warplayer.py
presets/: cosmic-flow.yaml  cosmic.yaml  cyber-tunnel.yaml  future-plasma.yaml  glitch-vhs.yaml  lofi-warm.yaml  minimal-mono.yaml  neon-synthwave.yaml  organic-liquid.yaml  voidcat-laser.yaml
scripts/: windows_provision_cudnn_next_to_ctranslate2.py
tests/: test_animatediff_prompts.py  test_app_effects_tab.py  test_app_keyframes_tab.py  test_audio_vignette.py  test_av_sync.py  test_background_hidream.py  test_beat_pulse.py  test_block_glitch.py  test_chromatic_aberration.py  test_color_invert.py  test_compositor_effects_timeline.py  test_compositor_progress_threading.py  test_compositor_reactive_tracks.py  test_effects_editor.py  test_effects_timeline.py  test_fade.py  test_ffmpeg_cmd.py  test_ffmpeg_tools.py  test_gpu_memory.py  test_keyframes_timeline_validate.py  test_logo_composite_rim.py  test_logo_rim_beams.py  test_logo_rim_lights.py  test_lyrics_aligner.py  test_lyrics_editor.py  test_metadata.py  test_nebula_flow_preset.py  test_orchestrator_effects_timeline.py  test_orchestrator_logo_rim_inputs.py  test_pinokio_windows_resilience.py  test_pixel_smear.py  test_preset_colors.py  test_preview.py  test_reactive_palette.py  test_reactive_shader.py  test_reactive_shader_background.py  test_reactive_shader_feedback.py  test_reactive_shader_tint.py  test_rife_manifest.py  test_rife_morph_timeline.py  (+8 more)
