[project]
name = "glitchframe"
version = "0.1.0"
description = "Local music video generator (Glitchframe)"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0,<5",
    # Lower bound only — pip may install 2.6+; WhisperX/pyannote need a compat shim (see pipeline/torch_checkpoint_compat.py) or torch<2.6.
    "torch>=2.0.0",
    "diffusers>=0.27.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "moderngl>=5.10.0",
    "skia-python>=87.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
# --- "Cargo-style" one-shot for this repo: core app + vocal stem + lyrics align (no BeatNet/madmom). ---
#   .venv\Scripts\python.exe -m pip install -e ".[all]"
# Same dependency set as `analysis` (kept for backwards compatibility).
#
# Windows + Python 3.11–3.12: pyproject pins a coherent GPU-friendly lyrics stack —
# PyTorch 2.2.2+cu121, WhisperX 3.3.0 (faster-whisper 1.1.0), ctranslate2 4.4.0 — so CTranslate2
# and PyTorch ship matching cuDNN-era DLL names (see README / windows-venv-recovery-guide).
# Windows + Python ≥3.13: WhisperX 3.3.0 does not support 3.13; use the newer cu124 + ctranslate2≥4.5 path.
# Linux/macOS: unchanged loose pins.
all = [
    "demucs>=4.0.0",
    "silero-vad>=5.1",
    "whisperx>=3.1.0; platform_system != 'Windows'",
    "torchaudio>=2.0.0; platform_system != 'Windows'",
    "whisperx>=3.1.0; platform_system == 'Windows' and python_version >= '3.13'",
    "torchaudio>=2.0.0; platform_system == 'Windows' and python_version >= '3.13'",
    "ctranslate2>=4.5.0,<5; platform_system == 'Windows' and python_version >= '3.13'",
    "torch==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "torchvision==0.17.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "torchaudio==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "whisperx==3.3.0; platform_system == 'Windows' and python_version < '3.13'",
    "faster-whisper==1.1.0; platform_system == 'Windows' and python_version < '3.13'",
    "ctranslate2==4.4.0; platform_system == 'Windows' and python_version < '3.13'",
]
# demucs + torchaudio: vocal stem only (Analyze).
vocals = [
    "demucs>=4.0.0",
    "torchaudio>=2.0.0; platform_system != 'Windows'",
    "torchaudio>=2.0.0; platform_system == 'Windows' and python_version >= '3.13'",
    "torchaudio==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
]
# WhisperX alignment ("Align lyrics") only. silero-vad tightens whisper's
# VAD on vocal stems; it's tiny (~1 MB ONNX, no GPU) and the aligner falls
# back cleanly when absent, so including it here is a quality win.
lyrics = [
    "silero-vad>=5.1",
    "whisperx>=3.1.0; platform_system != 'Windows'",
    "whisperx>=3.1.0; platform_system == 'Windows' and python_version >= '3.13'",
    "ctranslate2>=4.5.0,<5; platform_system == 'Windows' and python_version >= '3.13'",
    "torch==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "torchvision==0.17.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "torchaudio==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "whisperx==3.3.0; platform_system == 'Windows' and python_version < '3.13'",
    "faster-whisper==1.1.0; platform_system == 'Windows' and python_version < '3.13'",
    "ctranslate2==4.4.0; platform_system == 'Windows' and python_version < '3.13'",
]
# Optional beat detectors (BeatNet → madmom). madmom often needs Cython / wheels and may not build on every Python (e.g. 3.13). Analyzer falls back to librosa without these.
beats = [
    "BeatNet>=1.1.0",
    "madmom>=0.16",
]
# Full ML stack for Analyze + Align lyrics (same as `all`).
analysis = [
    "demucs>=4.0.0",
    "silero-vad>=5.1",
    "whisperx>=3.1.0; platform_system != 'Windows'",
    "torchaudio>=2.0.0; platform_system != 'Windows'",
    "whisperx>=3.1.0; platform_system == 'Windows' and python_version >= '3.13'",
    "torchaudio>=2.0.0; platform_system == 'Windows' and python_version >= '3.13'",
    "ctranslate2>=4.5.0,<5; platform_system == 'Windows' and python_version >= '3.13'",
    "torch==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "torchvision==0.17.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "torchaudio==2.2.2+cu121; platform_system == 'Windows' and python_version < '3.13'",
    "whisperx==3.3.0; platform_system == 'Windows' and python_version < '3.13'",
    "faster-whisper==1.1.0; platform_system == 'Windows' and python_version < '3.13'",
    "ctranslate2==4.4.0; platform_system == 'Windows' and python_version < '3.13'",
]
# Tests / tooling (not required to run the app).
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
